# EvoSym

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
Debug/: run.sh
Release/: build.sh  run.sh
doxygen/: Doxyfile
ideas/: quick_thoughts.txt
shaders/: camera.fs  camera.vs  debug_quad.fs  debug_quad.vs  normal.fs  normal.vs  shadow_mapping.fs  shadow_mapping.vs  test_1.fs  test_1.vs
src/display/: CMakeLists.txt
src/display/include/display/: QSFMLCanvas.hpp  displayUtils.hpp  mesh.hpp  shader.hpp  worldMesh.hpp
src/display/src/display/: display.cpp  display.h  displayQt.cpp  displayQt.h  gl.h  mainWindow.cpp  mainWindow.h  menu.h  mesh.h  openGLWidget.cpp  openGLWidget.h  qSfmlCanvas.cpp  qSfmlCanvas.h  renderWindow.cpp  renderWindow.h  sfmlRenderWindow.cpp  sfmlRenderWindow.h  sfmlView.cpp  sfmlView.h  simulationSettings.cpp  simulationSettings.h
src/display_elements/: CMakeLists.txt
src/display_elements/include/display_elements/: basicShapes.hpp  camera.hpp  displayUtils.hpp  glad_import.hpp  light.hpp  material.hpp  mesh.hpp  meshUtils.hpp  shader.hpp  shaderProgram.hpp  shadows.hpp  vertex.hpp
src/display_elements/src/display_elements/: arrowMesh.cpp  arrowMesh.h  button.h  mesh.cpp  mesh.h  sun.cpp  sun.h  worldMesh.cpp  worldMesh.h
src/executable/: CMakeLists.txt
src/executable/src/: main.cpp
src/glad/: CMakeLists.txt  readme
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/globals/: CMakeLists.txt
src/globals/include/globals/: globals.hpp  macros.hpp
src/stb/: CMakeLists.txt  stb_image.cpp
src/utils/: .CMakeLists.txt.swp  CMakeLists.txt
src/utils/include/utils/: eigen_conversations.hpp  eigen_glm_conversation.hpp  math.hpp  minmax.hpp  sanitize.hpp  simulatedUnit.hpp
src/utils/src/utils/: functions.cpp  functions.h
src/world/: CMakeLists.txt
src/world/src/world/: layer.h  plant.h  world.cpp  world.h
